deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-injected-by-annotations
spec:
  selector:
    matchLabels:
      app: alpine
  replicas: 1
  strategy:
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 0
   type: RollingUpdate
  template:
    metadata:
      labels:
        app: alpine
      annotations:
          netbird.io/inject: "true"      
    spec:
      containers:
      - name: alpine
        image: alpine
        command: ["/bin/sh", "-c", "while sleep 3600; do :; done"]
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
